--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,9 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
+    "@mui/x-charts": "^7.22.2",
+    "@mui/x-data-grid": "^7.22.2",
+    "@mui/x-data-grid-generator": "^7.22.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
