--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/x-charts": "^7.22.2",
     "@mui/x-data-grid": "^7.22.2",
     "@mui/x-data-grid-generator": "^7.22.2",
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
